--- a/detalle_piso.html
+++ b/detalle_piso.html
@@ -89,17 +89,17 @@
                 <div id="carouselContainer" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselContainer" data-bs-slide-to="0" class="active" aria-current="true"
-                            aria-label="Slide 1"></button>
+                            aria-label="Imagen 1"></button>
                         <button type="button" data-bs-target="#carouselContainer" data-bs-slide-to="1" aria-current="true"
-                            aria-label="Slide 2"></button>
+                            aria-label="Imagen 2"></button>
                         <button type="button" data-bs-target="#carouselContainer" data-bs-slide-to="2" aria-current="true"
-                            aria-label="Slide 3"></button>
+                            aria-label="Imagen 3"></button>
                             <button type="button" data-bs-target="#carouselContainer" data-bs-slide-to="3" aria-current="true"
-                            aria-label="Slide 4"></button>
+                            aria-label="Imagen 4"></button>
                             <button type="button" data-bs-target="#carouselContainer" data-bs-slide-to="4" aria-current="true"
-                            aria-label="Slide 5"></button>
+                            aria-label="Imagen 5"></button>
                             <button type="button" data-bs-target="#carouselContainer" data-bs-slide-to="5" aria-current="true"
-                            aria-label="Slide 6"></button>
+                            aria-label="Imagen 6"></button>
                     </div>
                     <div class="carousel-inner" id="carouselInner">
                         <!-- Aquí se insertarán las imágenes del carrusel -->
