--- a/calculadora.html
+++ b/calculadora.html
@@ -151,12 +151,12 @@
                         <form id="hipoteca-form" novalidate>
                             <div class="mb-3">
                                 <label for="value" class="form-label">Valor hipotecario en euros <span class="text-danger" >*</span></label>
-                                <input type="number" class="form-control form-control-sm input-short" id="value" aria-label="Valor hipotecario">
+                                <input type="number" class="form-control form-control-sm input-short" id="value" aria-label="Valor hipotecario en euros">
                                 <div class="invalid-feedback" aria-live="polite">Error: Por favor, ingrese un valor hipotecario válido.</div>
                             </div>
                             <div class="mb-3">
                                 <label for="savings" class="form-label">Ahorro aportado en euros <span class="text-danger" >*</span></label>
-                                <input type="number" class="form-control form-control-sm input-short" id="savings" aria-label="Ahorro aportado"  required>
+                                <input type="number" class="form-control form-control-sm input-short" id="savings" aria-label="Ahorro aportado en euros"  required>
                                 <div class="invalid-feedback" aria-live="polite">Error: Por favor, ingrese un ahorro aportado válido, menor que el valor hipotecario.</div>
                             </div>
                             <div class="mb-3">
