--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
         <!--para los indicadores de abajo-->
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselE" data-bs-slide-to="0" class="active" aria-current="true"
-                aria-label="Slide 1"></button>
+                aria-label="Imagen 1"></button>
             <button type="button" data-bs-target="#carouselE" data-bs-slide-to="1" aria-current="true"
-                aria-label="Slide 2"></button>
+                aria-label="Imagen 2"></button>
             <button type="button" data-bs-target="#carouselE" data-bs-slide-to="2" aria-current="true"
-                aria-label="Slide 3"></button>
+                aria-label="Imagen 3"></button>
         </div>
 
         <div class="carousel-inner">
@@ -111,7 +111,7 @@
         <!-- Fila 1 -->
         <div class="filtrotipo">
             <label for="filtroTipo">Tipo de inmueble:</label>
-            <select id="filtroTipo" class="small-input">
+            <select id="filtroTipo" class="small-input input-short">
                 <option value="cualquiera">Tipo de inmueble</option>
                 <option value="Piso">Piso</option>
                 <option value="Apartamento">Apartamento</option>
@@ -123,7 +123,7 @@
        
         <div class="filtroop">
             <label for="filtroOperacion">Operación:</label>
-            <select id="filtroOperacion" class="small-input">
+            <select id="filtroOperacion" class="small-input input-short">
                 <option value="cualquiera">Operación</option>
                 <option value="compra">Compra</option>
                 <option value="alquiler">Alquiler</option>
@@ -134,13 +134,14 @@
             <label for="filtroPrecioDesde">Precio:</label>
             <input type="number" id="filtroPrecioDesde" min="0" class="small-input" aria-label="Precio mínimo">
             <label for="filtroPrecioHasta" id="guion"><b>-</b></label>
-            <input type="number" id="filtroPrecioHasta" min="0" class="small-input" aria-label="Precio máximo">            
+            <input type="number" id="filtroPrecioHasta" min="0" class="small-input" aria-label="Precio máximo"> 
+            <label for="euros">euros</label>          
         </div>
 
         <!-- Fila 2 -->
         <div class="filtromuni">
             <label for="filtroMunicipio">Municipio:</label>
-            <select id="filtroMunicipio" class="small-input">
+            <select id="filtroMunicipio" class="small-input input-short">
                 <option value="cualquiera">Municipio</option>
                 <option value="Benalmádena">Benalmádena</option>
                 <option value="Estepona">Estepona</option>
@@ -153,13 +154,13 @@
         </div>
         <div class="filtrodistrito">
             <label for="filtroDistrito">Distrito (escoja primero un municipio):</label>
-            <select id="filtroDistrito" class="small-input">
+            <select id="filtroDistrito" class="small-input input-short">
                 <option value="cualquiera">Distrito</option>
             </select>
         </div>
         <div class="filtroestado">
             <label for="filtroEstado">Estado del inmueble:</label>
-            <select id="filtroEstado" class="small-input">
+            <select id="filtroEstado" class="small-input input-short">
                 <option value="cualquiera">Estado del inmueble</option>
                 <option value="regular">Regular o mejor</option>
                 <option value="buen">Bien o mejor</option>
@@ -170,17 +171,18 @@
         <!-- Fila 3 -->
         <div class="filtrohab">
             <label for="filtroHabitaciones">Nº Habitaciones</label>
-            <input type="number" id="filtroHabitaciones" min="0" class="small-input">
+            <input type="number" id="filtroHabitaciones" min="0" class="small-input input-short">
         </div>
         <div class="filtrobanos">
             <label for="filtroBanos">Nº Baños:</label>
-            <input type="number" id="filtroBanos" min="0" class="small-input">
+            <input type="number" id="filtroBanos" min="0" class="small-input input-short">
         </div>
         <div class="filtro-precio">
             <label for="filtroSuperficieDesde">Superficie:</label>
             <input type="number" id="filtroSuperficieDesde" min="0" class="small-input" aria-label="Superficie Minima">
             <label for="filtroSuperficieHasta" id="guion"><b>-</b></label>
-            <input type="number" id="filtroSuperficieHasta" min="0" class="small-input" aria-label="Superficie Maxima">
+            <input type="number" id="filtroSuperficieHasta" min="0" class="small-input" aria-label="Superficie Maxima"> 
+            <label for="metros">metros cuadrados</label>
         </div>       
     </div>
 </div>
