Campo Valor hipotecario required

--- a/calculadora.html
+++ b/calculadora.html
@@ -151,7 +151,7 @@
                         <form id="hipoteca-form" novalidate>
                             <div class="mb-3">
                                 <label for="value" class="form-label">Valor hipotecario en euros <span class="text-danger" >*</span></label>
-                                <input type="number" class="form-control form-control-sm input-short" id="value" aria-label="Valor hipotecario en euros">
+                                <input type="number" class="form-control form-control-sm input-short" id="value" aria-label="Valor hipotecario en euros" required>
                                 <div class="invalid-feedback" aria-live="polite">Error: Por favor, ingrese un valor hipotecario válido.</div>
                             </div>
                             <div class="mb-3">
