--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <!-- Fila 1 -->
         <div class="filtrotipo">
             <label for="filtroTipo">Tipo de inmueble:</label>
-            <select id="filtroTipo" class="small-input input-short">
+            <select id="filtroTipo" class="small-input">
                 <option value="cualquiera">Tipo de inmueble</option>
                 <option value="Piso">Piso</option>
                 <option value="Apartamento">Apartamento</option>
@@ -123,7 +123,7 @@
        
         <div class="filtroop">
             <label for="filtroOperacion">Operación:</label>
-            <select id="filtroOperacion" class="small-input input-short">
+            <select id="filtroOperacion" class="small-input">
                 <option value="cualquiera">Operación</option>
                 <option value="compra">Compra</option>
                 <option value="alquiler">Alquiler</option>
@@ -141,7 +141,7 @@
         <!-- Fila 2 -->
         <div class="filtromuni">
             <label for="filtroMunicipio">Municipio:</label>
-            <select id="filtroMunicipio" class="small-input input-short">
+            <select id="filtroMunicipio" class="small-input">
                 <option value="cualquiera">Municipio</option>
                 <option value="Benalmádena">Benalmádena</option>
                 <option value="Estepona">Estepona</option>
@@ -154,13 +154,13 @@
         </div>
         <div class="filtrodistrito">
             <label for="filtroDistrito">Distrito (escoja primero un municipio):</label>
-            <select id="filtroDistrito" class="small-input input-short">
+            <select id="filtroDistrito" class="small-input">
                 <option value="cualquiera">Distrito</option>
             </select>
         </div>
         <div class="filtroestado">
             <label for="filtroEstado">Estado del inmueble:</label>
-            <select id="filtroEstado" class="small-input input-short">
+            <select id="filtroEstado" class="small-input">
                 <option value="cualquiera">Estado del inmueble</option>
                 <option value="regular">Regular o mejor</option>
                 <option value="buen">Bien o mejor</option>
@@ -171,11 +171,11 @@
         <!-- Fila 3 -->
         <div class="filtrohab">
             <label for="filtroHabitaciones">Nº Habitaciones</label>
-            <input type="number" id="filtroHabitaciones" min="0" class="small-input input-short">
+            <input type="number" id="filtroHabitaciones" min="0" class="small-input">
         </div>
         <div class="filtrobanos">
             <label for="filtroBanos">Nº Baños:</label>
-            <input type="number" id="filtroBanos" min="0" class="small-input input-short">
+            <input type="number" id="filtroBanos" min="0" class="small-input">
         </div>
         <div class="filtro-precio">
             <label for="filtroSuperficieDesde">Superficie:</label>
